--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.3",
+        "jquery": "^3.6.3",
+        "sass": "^1.57.1",
+        "sass-loader": "^13.2.0",
+        "select2": "^4.1.0-rc.0"
     }
 }
